RESOLVED FIXED48705
[Qt] QtTestBrowser: Switching view type moves the embedded inspector
https://bugs.webkit.org/show_bug.cgi?id=48705
Summary [Qt] QtTestBrowser: Switching view type moves the embedded inspector
Andreas Kling
Reported 2010-10-29 18:31:26 PDT
Steps to reproduce: 1. Start QtTestBrowser in normal mode 2. Open the embedded web inspector (Ctrl+Alt+I) 3. Switch to QGraphicsWebView mode 4. Open the embedded web inspector (Ctrl+Alt+I) The inspector is now above the QSplitter :(
Attachments
Proposed patch (2.25 KB, patch)
2010-10-29 18:32 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2010-10-29 18:32:11 PDT
Created attachment 72425 [details] Proposed patch
Antonio Gomes
Comment 2 2010-10-29 21:53:09 PDT
Comment on attachment 72425 [details] Proposed patch Also a regression of bug 35247?
Andreas Kling
Comment 3 2010-10-30 04:35:16 PDT
(In reply to comment #2) > Also a regression of bug 35247? Not sure. I seem to remember being slightly itched by this over a longer period of time..
Andreas Kling
Comment 4 2010-10-30 07:48:11 PDT
Comment on attachment 72425 [details] Proposed patch Clearing flags on attachment: 72425 Committed r70980: <http://trac.webkit.org/changeset/70980>
Andreas Kling
Comment 5 2010-10-30 07:48:21 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.