2010-10-30  Andreas Kling  <kling@webkit.org>

Reviewed by Antonio Gomes.

        [Qt] QtTestBrowser: Switching view type moves the embedded inspector
        https://bugs.webkit.org/show_bug.cgi?id=48705

        Reinsert the embedded inspector into the splitter after changing
        between QWebView/QGraphicsWebView.

        * QtTestBrowser/launcherwindow.cpp:
        (LauncherWindow::init):
        (LauncherWindow::initializeView):
        * QtTestBrowser/webinspector.h:
        (WebInspector::WebInspector):


Canonical link: https://commits.webkit.org/61478@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@70980 268f45cc-cd09-0410-ab3c-d52691b4dbfc